1. Modified User entity and added some more fields 2. Added user role 3. user can login by userName or phoneNumber